[TeamController] Ajout d'une route pour récupérer les Team pour chaque jeux
